hphp/hack/test/typecheck/property_declaration_with_attribute_missing_visibility_modifier.php.exp
File "property_declaration_with_attribute_missing_visibility_modifier.php", line 3, characters 3-26:
Property declarations require a visibility modifier such as public, private or protected. (Parsing[1002])
